[gd_scene load_steps=3 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://Button.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 235.0
margin_top = 174.0
margin_right = 563.0
margin_bottom = 282.0
rect_pivot_offset = Vector2( 651, 375 )
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 142.0
margin_top = 63.0
margin_right = 630.0
margin_bottom = 150.0

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 39.0
margin_top = 479.0
margin_right = 363.0
margin_bottom = 584.0

[node name="Label2" type="Label" parent="."]
margin_left = 78.0
margin_top = 345.0
margin_right = 566.0
margin_bottom = 432.0

[node name="Button2" type="Button" parent="."]
margin_left = 714.0
margin_top = 450.0
margin_right = 1057.0
margin_bottom = 555.0

[node name="Button3" type="Button" parent="."]
margin_left = 887.0
margin_top = 202.0
margin_right = 1124.0
margin_bottom = 281.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="text_changed" from="TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
